# TPtask2

./: README.md
task2/: CMakeLists.txt
task2/A/: index.h  preparing.py
task2/B/: CMakeLists.txt  Makefile  cmake_install.cmake  lib.cpp  lib.h
task2/C/: main.cpp  main_test.cpp  main_test.h
task3/: balanser_1.yaml  balanser_2.yaml  deployment_1.yaml  deployment_2.yaml
